--- a/Tarea 6/dashboard/panel3.html
+++ b/Tarea 6/dashboard/panel3.html
@@ -1,11 +1,11 @@
 <link rel="import" href="bower_components/polymer/polymer.html">
 
-<dom-module id="panel-element">
+<dom-module id="panel3-element">
     <template>
      <link rel="stylesheet" href="bower_components/bootstrap/dist/css/bootstrap.css">
           <div class="panel panel-default">
                         <div class="panel-heading">
-                            <i class="fa fa-bar-chart-o fa-fw"></i>1 Panel
+                            <i class="fa fa-bar-chart-o fa-fw"></i>3 Panel
                         </div>
                         <!-- /.panel-heading -->
                         <div class="panel-body">
@@ -17,7 +17,7 @@
 </dom-module>
 <script>
 	Polymer({
-		is: "panel-element",
+		is: "panel3-element",
 	
 	});
 </script>
