--- a/Tarea 6/dashboard/dashboard.html
+++ b/Tarea 6/dashboard/dashboard.html
@@ -4,6 +4,8 @@
     <template>
      <link rel="stylesheet" href="bower_components/bootstrap/dist/css/bootstrap.css">
      <link rel="import" href="panel.html">
+       <link rel="import" href="panel2.html">
+         <link rel="import" href="panel3.html">
        <div id="page-wrapper">
             <div class="row">
                 <div class="col-lg-12">
@@ -17,10 +19,10 @@
                    <panel-element></panel-element>
                 </div>
                 <div class="col-xs-12 col-sm-6  col-md-6 col-lg-4 draggable">
-                    <panel-element></panel-element>
+                    <panel2-element></panel2-element>
                 </div>
                 <div class="col-xs-12 col-sm-6  col-md-6 col-lg-4 draggable">
-                     <panel-element></panel-element>
+                     <panel3-element></panel3-element>
                 </div>
             </div>
        
